[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/login_panel.gd" type="Script" id=1]
[ext_resource path="res://styles/small_labels.tres" type="Theme" id=2]
[ext_resource path="res://styles/tool_buttons.tres" type="Theme" id=3]

[node name="login_panel" type="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="login_icons" type="GridContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -223.15
margin_right = 150.0
margin_bottom = 76.8503
columns = 4

[node name="log_01" type="Button" parent="login_icons"]
margin_right = 72.0
margin_bottom = 72.0
rect_min_size = Vector2( 72, 72 )
theme = ExtResource( 3 )

[node name="log_02" type="Button" parent="login_icons"]
margin_left = 76.0
margin_right = 148.0
margin_bottom = 72.0
rect_min_size = Vector2( 72, 72 )
theme = ExtResource( 3 )

[node name="log_03" type="Button" parent="login_icons"]
margin_left = 152.0
margin_right = 224.0
margin_bottom = 72.0
rect_min_size = Vector2( 72, 72 )
theme = ExtResource( 3 )

[node name="log_04" type="Button" parent="login_icons"]
margin_left = 228.0
margin_right = 300.0
margin_bottom = 72.0
rect_min_size = Vector2( 72, 72 )
theme = ExtResource( 3 )

[node name="log_05" type="Button" parent="login_icons"]
margin_top = 76.0
margin_right = 72.0
margin_bottom = 148.0
rect_min_size = Vector2( 72, 72 )
theme = ExtResource( 3 )

[node name="log_06" type="Button" parent="login_icons"]
margin_left = 76.0
margin_top = 76.0
margin_right = 148.0
margin_bottom = 148.0
rect_min_size = Vector2( 72, 72 )
theme = ExtResource( 3 )

[node name="log_07" type="Button" parent="login_icons"]
margin_left = 152.0
margin_top = 76.0
margin_right = 224.0
margin_bottom = 148.0
rect_min_size = Vector2( 72, 72 )
theme = ExtResource( 3 )

[node name="log_08" type="Button" parent="login_icons"]
margin_left = 228.0
margin_top = 76.0
margin_right = 300.0
margin_bottom = 148.0
rect_min_size = Vector2( 72, 72 )
theme = ExtResource( 3 )

[node name="log_09" type="Button" parent="login_icons"]
margin_top = 152.0
margin_right = 72.0
margin_bottom = 224.0
rect_min_size = Vector2( 72, 72 )
theme = ExtResource( 3 )

[node name="log_10" type="Button" parent="login_icons"]
margin_left = 76.0
margin_top = 152.0
margin_right = 148.0
margin_bottom = 224.0
rect_min_size = Vector2( 72, 72 )
theme = ExtResource( 3 )

[node name="log_11" type="Button" parent="login_icons"]
margin_left = 152.0
margin_top = 152.0
margin_right = 224.0
margin_bottom = 224.0
rect_min_size = Vector2( 72, 72 )
theme = ExtResource( 3 )

[node name="log_12" type="Button" parent="login_icons"]
margin_left = 228.0
margin_top = 152.0
margin_right = 300.0
margin_bottom = 224.0
rect_min_size = Vector2( 72, 72 )
theme = ExtResource( 3 )

[node name="log_13" type="Button" parent="login_icons"]
margin_top = 228.0
margin_right = 72.0
margin_bottom = 300.0
rect_min_size = Vector2( 72, 72 )
theme = ExtResource( 3 )

[node name="log_14" type="Button" parent="login_icons"]
margin_left = 76.0
margin_top = 228.0
margin_right = 148.0
margin_bottom = 300.0
rect_min_size = Vector2( 72, 72 )
theme = ExtResource( 3 )

[node name="log_15" type="Button" parent="login_icons"]
margin_left = 152.0
margin_top = 228.0
margin_right = 224.0
margin_bottom = 300.0
rect_min_size = Vector2( 72, 72 )
theme = ExtResource( 3 )

[node name="log_16" type="Button" parent="login_icons"]
margin_left = 228.0
margin_top = 228.0
margin_right = 300.0
margin_bottom = 300.0
rect_min_size = Vector2( 72, 72 )
theme = ExtResource( 3 )

[node name="login_outputs" type="GridContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -226.0
margin_top = 140.699
margin_right = 226.0
margin_bottom = 212.699
columns = 6

[node name="log_01" type="Button" parent="login_outputs"]
margin_right = 72.0
margin_bottom = 72.0
rect_min_size = Vector2( 72, 72 )
theme = ExtResource( 3 )

[node name="log_02" type="Button" parent="login_outputs"]
margin_left = 76.0
margin_right = 148.0
margin_bottom = 72.0
rect_min_size = Vector2( 72, 72 )
theme = ExtResource( 3 )

[node name="log_03" type="Button" parent="login_outputs"]
margin_left = 152.0
margin_right = 224.0
margin_bottom = 72.0
rect_min_size = Vector2( 72, 72 )
theme = ExtResource( 3 )

[node name="log_04" type="Button" parent="login_outputs"]
margin_left = 228.0
margin_right = 300.0
margin_bottom = 72.0
rect_min_size = Vector2( 72, 72 )
theme = ExtResource( 3 )

[node name="log_05" type="Button" parent="login_outputs"]
margin_left = 304.0
margin_right = 376.0
margin_bottom = 72.0
rect_min_size = Vector2( 72, 72 )
theme = ExtResource( 3 )

[node name="log_06" type="Button" parent="login_outputs"]
margin_left = 380.0
margin_right = 452.0
margin_bottom = 72.0
rect_min_size = Vector2( 72, 72 )
theme = ExtResource( 3 )

[node name="col_test" type="ColorRect" parent="."]
visible = false
margin_left = 764.657
margin_top = 422.319
margin_right = 804.657
margin_bottom = 462.319

[node name="hexadec" type="Label" parent="col_test"]
margin_left = -4.75507
margin_top = 44.0975
margin_right = 45.2449
margin_bottom = 62.0975
theme = ExtResource( 2 )
text = "#00ff00"
